[gd_scene load_steps=14 format=3 uid="uid://cemsn382ds6wt"]

[ext_resource type="Shader" uid="uid://bora3c3tpu6pq" path="res://Assets/Shader/control.gdshader" id="1_0fbet"]
[ext_resource type="Script" uid="uid://dw0psq8rp8dxs" path="res://Assets/Script/control.gd" id="1_62e2m"]
[ext_resource type="Texture2D" uid="uid://c4gwmmu7drcsv" path="res://Assets/Imagens/gnometwitch_93827.png" id="2_iy58a"]
[ext_resource type="Texture2D" uid="uid://dhkk5py82jj6n" path="res://Assets/Imagens/windows-7-background-akqmsawnpm2hbq67.jpg" id="3_qtu10"]
[ext_resource type="Texture2D" uid="uid://d1j2l4tpj5e0w" path="res://Assets/Imagens/cfae886e263126f685510e2f45b82970.jpg" id="4_ee4bf"]
[ext_resource type="FontFile" uid="uid://brjtypgpr5672" path="res://Assets/Fonts/Darkmode demo-Regular.ttf" id="5_g6pjv"]
[ext_resource type="Texture2D" uid="uid://btq38tiflqfse" path="res://Assets/Imagens/16305343.png" id="5_kbped"]
[ext_resource type="Texture2D" uid="uid://chs8tlftr5kvo" path="res://Assets/Imagens/sony_vegas_23333.png" id="6_fj5cn"]
[ext_resource type="Texture2D" uid="uid://dqrdqpnf61sew" path="res://Assets/Imagens/Windows_Folder_icon-icons.png" id="8_6a6wx"]
[ext_resource type="Texture2D" uid="uid://fdg2lyl2001e" path="res://Assets/Imagens/communityIcon_hbfqltc7u6l01.png" id="9_sky72"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0fbet"]
shader = ExtResource("1_0fbet")
shader_parameter/scanline_color = Color(0, 0, 0, 1)
shader_parameter/flicker_color = Color(0, 0, 0, 1)
shader_parameter/scanlines_count = 10.0
shader_parameter/scanlines_intensity = 0.05
shader_parameter/flicker_speed = 30.0
shader_parameter/flicker_intensity = 0.025
shader_parameter/color_offset = 1.5
shader_parameter/blur = 0.15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee4bf"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbped"]
bg_color = Color(0.501407, 0.501406, 0.501406, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62e2m")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 332.0
offset_right = -373.0
offset_bottom = 31.0
grow_horizontal = 2
scale = Vector2(1.56, 0.72)

[node name="TextureRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_0fbet")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Windows-7-background-akqmsawnpm2Hbq67" type="Sprite2D" parent="."]
show_behind_parent = true
texture_filter = 1
position = Vector2(131, 142)
scale = Vector2(0.37474, 0.33)
texture = ExtResource("3_qtu10")

[node name="Button" type="Button" parent="."]
layout_mode = 2
offset_left = 27.0
offset_top = 39.0
offset_right = 803.0
offset_bottom = 815.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0475674, 0.0373506)
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_ee4bf")
theme_override_styles/hover = SubResource("StyleBoxFlat_kbped")
icon = ExtResource("4_ee4bf")
flat = true

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_left = -462.206
offset_top = 776.773
offset_right = 1340.79
offset_bottom = 1172.77
theme_override_fonts/font = ExtResource("5_g6pjv")
theme_override_font_sizes/font_size = 396
text = "Ghostly Freedom"

[node name="jogo2" type="Button" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 118.0
offset_top = 27.0
offset_right = 382.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.12092, 0.0986597)
icon = ExtResource("5_kbped")
flat = true

[node name="Label" type="Label" parent="jogo2"]
texture_filter = 1
layout_mode = 0
offset_left = -363.988
offset_top = 233.457
offset_right = 672.012
offset_bottom = 423.457
theme_override_fonts/font = ExtResource("5_g6pjv")
theme_override_font_sizes/font_size = 189
text = "Memories of Zeruos"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.141
anchor_top = 0.064
anchor_right = 0.141
anchor_bottom = 0.064
offset_left = -141.432
offset_top = 107.528
offset_right = -37.432
offset_bottom = 211.528
scale = Vector2(0.377295, 0.28136)

[node name="Button3" type="Button" parent="VBoxContainer2"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("6_fj5cn")
flat = true

[node name="Label" type="Label" parent="VBoxContainer2/Button3"]
texture_filter = 1
layout_mode = 2
offset_left = -37.1063
offset_top = 95.9623
offset_right = 149.894
offset_bottom = 141.962
theme_override_font_sizes/font_size = 33
text = " VEGAS PRO"

[node name="Button5" type="Button" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 145.0
offset_top = 87.0
offset_right = 249.0
offset_bottom = 191.0
scale = Vector2(0.452909, 0.358971)
icon = ExtResource("8_6a6wx")
flat = true

[node name="Label" type="Label" parent="Button5"]
texture_filter = 1
layout_mode = 0
offset_left = -61.8226
offset_top = 91.9294
offset_right = 177.177
offset_bottom = 135.929
theme_override_font_sizes/font_size = 31
text = "Video para upar"

[node name="Button4" type="Button" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 44.0
offset_top = 96.0
offset_right = 148.0
offset_bottom = 200.0
scale = Vector2(0.303759, 0.258639)
size_flags_horizontal = 0
icon = ExtResource("2_iy58a")
flat = true

[node name="Label" type="Label" parent="Button4"]
texture_filter = 1
layout_mode = 2
offset_left = -62.5496
offset_top = 92.7934
offset_right = 190.45
offset_bottom = 165.793
theme_override_font_sizes/font_size = 50
text = "Twitch"
horizontal_alignment = 1

[node name="Button6" type="Button" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 84.0
offset_top = 154.0
offset_right = 188.0
offset_bottom = 258.0
scale = Vector2(0.495107, 0.357153)
icon = ExtResource("9_sky72")
flat = true

[node name="Label" type="Label" parent="Button6"]
texture_filter = 1
layout_mode = 0
offset_left = -29.753
offset_top = 101.217
offset_right = 54.247
offset_bottom = 124.217
scale = Vector2(2.01865, 2.02029)
text = "Obs Studio"

[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="Fight_music_submitted"]
[connection signal="text_submitted" from="LineEdit" to="." method="jamv_truck_submitted"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="jogo2" to="." method="_on_jogo_2_pressed"]
